--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-323.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-339.3KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇬🇧 英国-1.28MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林), server: us1.nodegz.top, port: 1400, type: trojan, password: fc578146-8cfb-3c32-97e0-67621c90b130, sni: us1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.51MB/s(Youtube:不良林), server: 85.208.108.94, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
   - {name: 🇯🇵 日本-2.23MB/s(Youtube:不良林), server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 未知国家-1.54MB/s(Youtube:不良林), server: v125.v2dns.bar, port: 80, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v1252N93nZez6Py, ws-headers: {Host: v125.v2dns.bar}}
+  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇯🇵 日本-2.57MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-2.35MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-2.45MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇯🇵 日本-2.21MB/s(Youtube:不良林), server: 85.208.108.94, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.96MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-339.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 未知国家-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-339.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 未知国家-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-339.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 未知国家-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-339.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 未知国家-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-339.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 未知国家-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-339.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 未知国家-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-323.3KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.22MB/s(Youtube:不良林)
-      - 🇯🇵 日本-339.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.28MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.97MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.51MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.23MB/s(Youtube:不良林)
+      - 未知国家-1.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.45MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.96MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
